# datascience-study

./: .gitignore  README.md
deeplearning/: pyproject.toml
deeplearning/deeplearning/: Ch 03. 탠서플로우_케라스 이론 및 실습_TensorFlow_Keras_Tutorial.ipynb  Ch 04. 파이토치 이론 및 실습_Pytorch_Tutorial.ipynb
deeplearning/deeplearning/.ipynb_checkpoints/: Ch 03. 탠서플로우_케라스 이론 및 실습_TensorFlow_Keras_Tutorial-checkpoint.ipynb
deeplearning/kh-kim/basic_1/: README.md  tensor.ipynb
deeplearning/kh-kim/basic_1/01_torch_tutorials/: 04-04-tensor.ipynb  04-05-tensor_operations.ipynb  04-07-tensor_slicing_and_concat.ipynb  04-08-tensor_useful_methods.ipynb
deeplearning/kh-kim/basic_1/01_torch_tutorials/.ipynb_checkpoints/: 04-05-tensor_operations-checkpoint.ipynb  04-08-tensor_useful_methods-checkpoint.ipynb
deeplearning/kh-kim/basic_1/02_linear_layer/: 05-02-matrix_multiplication.ipynb  05-04-linear_layer.ipynb  05-05-use_gpu.ipynb
deeplearning/kh-kim/basic_1/03_loss_function/: 06-02-mse.ipynb
deeplearning/kh-kim/basic_1/05_linear_regression/: 08-03-linear_regression.ipynb
fastcampus/deeplearning/: 01_how_to_use_ipynb.ipynb
fastcampus/online/: python_1.ipynb  python_2_numpy_pandas.ipynb
fastcampus/online/01_python_modules/.ipynb_checkpoints/: python_1-checkpoint.ipynb
fastcampus/online/02_math/: math1.ipynb
fastcampus/online/scholl/: setup.py
fastcampus/online/scholl/dss.egg-info/: PKG-INFO  SOURCES.txt
opencv/: README.md
tensorflow/: README.md
tensorflow/tensor_v1/a_tensorflow_study/: 1_basic_regression.ipynb  2_basic_classification.ipynb  3_NN_XOR.ipynb
(+1 files in other folders)
