[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["AmadeusJ <dawoonjung1026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = ">=1.26.0,<2.0.0"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
